# ncnn

./: CMakeLists.txt
autotest/: CMakeLists.txt  autotest.cpp  test_convlution.h  test_model.h
examples/: cat.ppm
src/: gpu.cpp  gpu.h  net.cpp  net.h
src/CL/: cl.h  cl.hpp  cl_ext.h  cl_gl.h  cl_gl_ext.h  cl_platform.h  opencl.h
